# connector-github

./: README.md  pyproject.toml
src/connector_github/commands/: startActionWorkflow.py
